--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -2,5 +2,15 @@
     "@@locale" : "pt",
     "appTitle": "Mapiah",
 
-    "initialPresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion"
+    "initialPresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
+
+    "languageName": "{language, select, en {English} pt {Português} other {Desconhecido}}",
+
+    "selectTH2File": "Selecione um arquivo TH2",
+
+    "aboutMapiah": "Sobre o Mapiah",
+
+    "close": "Fechar",
+
+    "mapiahVersion": "Versão {version}"
 }
