--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -1,16 +1,12 @@
 {
     "@@locale" : "pt",
-    "appTitle": "Mapiah",
-
-    "initialPresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
-
-    "languageName": "{language, select, en {English} pt {Português} other {Desconhecido}}",
-
-    "selectTH2File": "Selecione um arquivo TH2",
 
     "aboutMapiah": "Sobre o Mapiah",
-
+    "appTitle": "Mapiah",
     "close": "Fechar",
-
-    "mapiahVersion": "Versão {version}"
+    "initialPresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
+    "languageName": "{language, select, en {English} pt {Português} other {Desconhecido}}",
+    "mapiahVersion": "Versão {version}",
+    "parsingErrors": "Erros na interpretação do arquivo",
+    "selectTH2File": "Selecione um arquivo TH2"
 }
