--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -5,7 +5,7 @@
     "appTitle": "Mapiah",
     "close": "Fechar",
     "initialPresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
-    "languageName": "{language, select, en {English} pt {Português} other {Desconhecido}}",
+    "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
     "mapiahVersion": "Versão {version}",
     "parsingErrors": "Erros na interpretação do arquivo",
     "selectTH2File": "Selecione um arquivo TH2"
