--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -9,5 +9,9 @@
     "fileEditWindowWindowTitle": "Edição de arquivo",
     "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
     "parsingErrors": "Erros na interpretação do arquivo",
+    "th2FileEditPageZoomIn": "Aproximar",
+    "th2FileEditPageZoomOptions": "Opções de zoom",
+    "th2FileEditPageZoomOut": "Afastar",
+    "th2FileEditPageZoomShowAll": "Mostrar tudo",
     "th2FilePickSelectTH2File": "Selecione um arquivo TH2"
 }
