--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -9,6 +9,7 @@
     "fileEditWindowWindowTitle": "Edição de arquivo",
     "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
     "parsingErrors": "Erros na interpretação do arquivo",
+    "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
     "th2FileEditPageZoomIn": "Aproximar",
     "th2FileEditPageZoomOptions": "Opções de zoom",
     "th2FileEditPageZoomOut": "Afastar",
