--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -8,6 +8,11 @@
     "initialPagePresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
     "fileEditWindowWindowTitle": "Edição de arquivo",
     "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
+    "mpMoveBezierLineSegmentCommandDescription": "Mover segmento de linha Bézier",
+    "mpMoveElementsCommandDescription": "Mover elementos",
+    "mpMoveLineCommandDescription": "Mover linha",
+    "mpMovePointCommandDescription": "Mover ponto",
+    "mpMoveStraightLineSegmentCommandDescription": "Mover segmento de linha reta",
     "parsingErrors": "Erros na interpretação do arquivo",
     "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
     "th2FileEditPageNoUndoAvailable": "Nenhuma ação para desfazer",
