Creating THCalculateChildrenBoundingBox and starting support for multiple THSceraps in visualization

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -83,7 +83,13 @@
   "@parsingErrors": {
     "description": "The label for the parsing errors dialog",
     "type": "text"
-  } ,
+  },
+
+  "th2FileEditPageChangeActiveScrapTool": "Change active scrap",
+  "@th2FileEditPageChangeActiveScrapTool": {
+    "description": "The label for the change active scrap tool button",
+    "type": "text"
+  },
 
   "th2FileEditPageLoadingFile": "Loading file {filename} ...",
   "@th2FileEditPageLoadingFile": {
