--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -8,6 +8,11 @@
     "initialPagePresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
     "fileEditWindowWindowTitle": "Edição de arquivo",
     "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
+    "mpLengthUnitCentimeterAbbreviation": "cm",
+    "mpLengthUnitFootAbbreviation": "ft",
+    "mpLengthUnitInchAbbreviation": "in",
+    "mpLengthUnitMeterAbbreviation": "m",
+    "mpLengthUnitYardAbbreviation": "yd",
     "mpMoveBezierLineSegmentCommandDescription": "Mover segmento de linha Bézier",
     "mpMoveElementsCommandDescription": "Mover elementos",
     "mpMoveLineCommandDescription": "Mover linha",
