--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -5,6 +5,9 @@
     "aboutMapiahDialogWindowTitle": "Sobre o Mapiah",
     "appTitle": "Mapiah",
     "close": "Fechar",
+    "initialPageAboutMapiahDialog": "Sobre o Mapiah",
+    "initialPageLanguage": "Idioma",
+    "initialPageOpenFile": "Abrir arquivo (Ctrl+O)",
     "initialPagePresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
     "fileEditWindowWindowTitle": "Edição de arquivo",
     "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
@@ -19,16 +22,20 @@
     "mpMovePointCommandDescription": "Mover ponto",
     "mpMoveStraightLineSegmentCommandDescription": "Mover segmento de linha reta",
     "parsingErrors": "Erros na interpretação do arquivo",
-    "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo",
+    "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+C)",
     "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
     "th2FileEditPageNoUndoAvailable": "Nenhuma ação para desfazer",
     "th2FileEditPageNoRedoAvailable": "Nenhuma ação para refazer",
     "th2FileEditPagePanTool": "Mover ponto de vista",
+    "th2FileEditPageSave": "Salvar (Ctrl+S)",
+    "th2FileEditPageSaveAs": "Salvar como (Shift+Ctrl+S)",
+    "th2FileEditPageRedo": "Refazer '{redoDescription}' (Ctrl+Y)",
     "th2FileEditPageSelectTool": "Selecionar",
-    "th2FileEditPageZoomIn": "Aproximar (Ctrl+)",
+    "th2FileEditPageUndo": "DEsfazer '{undoDescription}' (Ctrl+Z)",
+    "th2FileEditPageZoomIn": "Aproximar (+)",
     "th2FileEditPageZoomOneToOne": "Mostrar 1:1 (1)",
     "th2FileEditPageZoomOptions": "Opções de zoom",
-    "th2FileEditPageZoomOut": "Afastar (Ctrl-)",
+    "th2FileEditPageZoomOut": "Afastar (-)",
     "th2FileEditPageZoomOutFile": "Mostrar arquivo (3)",
     "th2FileEditPageZoomOutScrap": "Mostrar croqui (4)",
     "th2FileEditPageZoomToSelection": "Mostrar seleção (2)",
