--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -16,6 +16,12 @@
     "mpLengthUnitInchAbbreviation": "in",
     "mpLengthUnitMeterAbbreviation": "m",
     "mpLengthUnitYardAbbreviation": "yd",
+    "mpAddElementsCommandDescription": "Criar elementos",
+    "mpAddLineCommandDescription": "Criar linha",
+    "mpAddPointCommandDescription": "Criar ponto", 
+    "mpDeleteElementsCommandDescription": "Apagar elementos",
+    "mpDeleteLineCommandDescription": "Apagar linha", 
+    "mpDeletePointCommandDescription": "Apagar ponto",
     "mpMoveBezierLineSegmentCommandDescription": "Mover segmento de linha Bézier",
     "mpMoveElementsCommandDescription": "Mover elementos",
     "mpMoveLineCommandDescription": "Mover linha",
@@ -23,6 +29,7 @@
     "mpMoveStraightLineSegmentCommandDescription": "Mover segmento de linha reta",
     "parsingErrors": "Erros na interpretação do arquivo",
     "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+C)",
+    "th2FileEditPageDeleteButton": "Apagar (Del)",
     "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
     "th2FileEditPageNoUndoAvailable": "Nenhuma ação para desfazer",
     "th2FileEditPageNoRedoAvailable": "Nenhuma ação para refazer",
@@ -31,7 +38,7 @@
     "th2FileEditPageSaveAs": "Salvar como (Shift+Ctrl+S)",
     "th2FileEditPageRedo": "Refazer '{redoDescription}' (Ctrl+Y)",
     "th2FileEditPageSelectTool": "Selecionar",
-    "th2FileEditPageUndo": "DEsfazer '{undoDescription}' (Ctrl+Z)",
+    "th2FileEditPageUndo": "Desfazer '{undoDescription}' (Ctrl+Z)",
     "th2FileEditPageZoomIn": "Aproximar (+)",
     "th2FileEditPageZoomOneToOne": "Mostrar 1:1 (1)",
     "th2FileEditPageZoomOptions": "Opções de zoom",
