--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -28,6 +28,9 @@
     "mpMovePointCommandDescription": "Mover ponto",
     "mpMoveStraightLineSegmentCommandDescription": "Mover segmento de linha reta",
     "parsingErrors": "Erros na interpretação do arquivo",
+    "th2FileEditPageAddArea": "Adicionar área (A)",
+    "th2FileEditPageAddLine": "Adicionar linha (L)",
+    "th2FileEditPageAddPoint": "Adicionar ponto (P)",
     "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+C)",
     "th2FileEditPageDeleteButton": "Apagar (Del)",
     "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
