--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -28,9 +28,10 @@
     "mpMovePointCommandDescription": "Mover ponto",
     "mpMoveStraightLineSegmentCommandDescription": "Mover segmento de linha reta",
     "parsingErrors": "Erros na interpretação do arquivo",
-    "th2FileEditPageAddArea": "Adicionar área (A)",
-    "th2FileEditPageAddLine": "Adicionar linha (L)",
-    "th2FileEditPageAddPoint": "Adicionar ponto (P)",
+    "th2FileEditPageAddArea": "Criar área (A)",
+    "th2FileEditPageAddElementOptions": "Criar elemento",
+    "th2FileEditPageAddLine": "Criar linha (L)",
+    "th2FileEditPageAddPoint": "Criar ponto (P)",
     "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+C)",
     "th2FileEditPageDeleteButton": "Apagar (Del)",
     "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
