--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -29,9 +29,12 @@
     "mpMoveStraightLineSegmentCommandDescription": "Mover segmento de linha reta",
     "parsingErrors": "Erros na interpretação do arquivo",
     "th2FileEditPageAddArea": "Criar área (A)",
+    "th2FileEditPageAddAreaStatusBarMessage": "Clique para criar uma área do tipo {type}",
     "th2FileEditPageAddElementOptions": "Criar elemento",
     "th2FileEditPageAddLine": "Criar linha (L)",
+    "th2FileEditPageAddLineStatusBarMessage": "Clique para criar uma linha do tipo {type}",
     "th2FileEditPageAddPoint": "Criar ponto (P)",
+    "th2FileEditPageAddPointStatusBarMessage": "Clique para criar um ponto do tipo {type}",
     "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+C)",
     "th2FileEditPageDeleteButton": "Apagar (Del)",
     "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
