--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -37,6 +37,7 @@
     "th2FileEditPageAddPointStatusBarMessage": "Clique para criar um ponto do tipo {type}",
     "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+C)",
     "th2FileEditPageDeleteButton": "Apagar (Del)",
+    "th2FileEditPageEmptySelectionStatusBarMessage": "Nenhum elemento selecionado",
     "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
     "th2FileEditPageNoUndoAvailable": "Nenhuma ação para desfazer",
     "th2FileEditPageNoRedoAvailable": "Nenhuma ação para refazer",
