--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -16,12 +16,15 @@
     "mpLengthUnitInchAbbreviation": "in",
     "mpLengthUnitMeterAbbreviation": "m",
     "mpLengthUnitYardAbbreviation": "yd",
-    "mpCreateElementsCommandDescription": "Criar elementos",
-    "mpCreateLineCommandDescription": "Criar linha",
-    "mpCreatePointCommandDescription": "Criar ponto", 
+    "mpAddElementsCommandDescription": "Adicionar elementos",
+    "mpAddLineCommandDescription": "Adicionar linha",
+    "mpAddLineSegmentCommandDescription": "Adicionar segmento de linha",
+    "mpAddPointCommandDescription": "Adicionar ponto", 
     "mpDeleteElementsCommandDescription": "Apagar elementos",
     "mpDeleteLineCommandDescription": "Apagar linha", 
+    "mpDeleteLineSegmentCommandDescription": "Apagar segmento de linha", 
     "mpDeletePointCommandDescription": "Apagar ponto",
+    "mpEditLineSegmentCommandDescription": "Editar segmento de linha",
     "mpMoveBezierLineSegmentCommandDescription": "Mover segmento de linha Bézier",
     "mpMoveElementsCommandDescription": "Mover elementos",
     "mpMoveLineCommandDescription": "Mover linha",
