--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -41,6 +41,9 @@
     "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+C)",
     "th2FileEditPageDeleteButton": "Apagar (Del)",
     "th2FileEditPageEmptySelectionStatusBarMessage": "Nenhum elemento selecionado",
+    "th2FileEditPageNonEmptySelectionOnlyLinesStatusBarMessage": "{amount} linha(s) selecionadas",
+    "th2FileEditPageNonEmptySelectionOnlyPointsStatusBarMessage": "{amount} pontos(s) selecionados",
+    "th2FileEditPageNonEmptySelectionPointsAndLinesStatusBarMessage": "{pointsAmount} pontos(s) e {linesAmount} linhas(s) selecionados",
     "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
     "th2FileEditPageNoUndoAvailable": "Nenhuma ação para desfazer",
     "th2FileEditPageNoRedoAvailable": "Nenhuma ação para refazer",
