Setting keyboard shortcut for 'Select' and creating initial version of 'select single line' state

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -332,7 +332,7 @@
     }
   },
 
-  "th2FileEditPageSelectTool": "Select",
+  "th2FileEditPageSelectTool": "Select (C)",
   "@th2FileEditPageSelectTool": {
     "description": "The label for the select tool button",
     "type": "text"
