--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -11,20 +11,21 @@
     "initialPagePresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
     "fileEditWindowWindowTitle": "Edição de arquivo",
     "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
+    "mpAddElementsCommandDescription": "Adicionar elementos",
+    "mpAddLineCommandDescription": "Adicionar linha",
+    "mpAddLineSegmentCommandDescription": "Adicionar segmento de linha",
+    "mpAddPointCommandDescription": "Adicionar ponto",
+    "mpDeleteElementsCommandDescription": "Apagar elementos",
+    "mpDeleteLineCommandDescription": "Apagar linha",
+    "mpDeleteLineSegmentCommandDescription": "Apagar segmento de linha",
+    "mpDeletePointCommandDescription": "Apagar ponto",
+    "mpEditLineCommandDescription": "Editar linha",
+    "mpEditLineSegmentCommandDescription": "Editar segmento de linha",
     "mpLengthUnitCentimeterAbbreviation": "cm",
     "mpLengthUnitFootAbbreviation": "ft",
     "mpLengthUnitInchAbbreviation": "in",
     "mpLengthUnitMeterAbbreviation": "m",
     "mpLengthUnitYardAbbreviation": "yd",
-    "mpAddElementsCommandDescription": "Adicionar elementos",
-    "mpAddLineCommandDescription": "Adicionar linha",
-    "mpAddLineSegmentCommandDescription": "Adicionar segmento de linha",
-    "mpAddPointCommandDescription": "Adicionar ponto", 
-    "mpDeleteElementsCommandDescription": "Apagar elementos",
-    "mpDeleteLineCommandDescription": "Apagar linha", 
-    "mpDeleteLineSegmentCommandDescription": "Apagar segmento de linha", 
-    "mpDeletePointCommandDescription": "Apagar ponto",
-    "mpEditLineSegmentCommandDescription": "Editar segmento de linha",
     "mpMoveBezierLineSegmentCommandDescription": "Mover segmento de linha Bézier",
     "mpMoveElementsCommandDescription": "Mover elementos",
     "mpMoveLineCommandDescription": "Mover linha",
